--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,17 @@
       content="Web site created using create-react-app"
     />
     <title>Jiza Architects</title>
-    <link rel="https://gistcdn.githack.com/mfd/7c7a915eb31474cc8c6a65066a4c4dc3/raw/f0f2fb94c21dea904812a53e0eb6cf0bc87f3754/GTWalsheimPro.css">
+    <link
+      rel="https://gistcdn.githack.com/mfd/7c7a915eb31474cc8c6a65066a4c4dc3/raw/f0f2fb94c21dea904812a53e0eb6cf0bc87f3754/GTWalsheimPro.css"
+    />
+    <link rel="stylesheet" href="../src/App.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div id="preloader">
+        <img src="../src/helper/loader.gif" alt="loader" />
+      </div>
+    </div>
   </body>
 </html>
